# lotus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/tests/: lm_tests.py  multimodality_tests.py  rm_tests.py
.github/workflows/: ruff.yml  tests.yml
.lotus_cache/: cache.db
docs/: approximation_cascades.rst  conf.py  configurations.rst  core_concepts.rst  examples.rst  index.rst  installation.rst  llm.rst  models_module.rst  multimodal_models.rst  prompt_strategies.rst  quickstart.rst  requirements-docs.txt  reranker_models.rst  retriever_models.rst  sem_agg.rst  sem_cluster.rst  sem_dedup.rst  sem_extract.rst  sem_filter.rst  sem_index.rst  sem_join.rst  sem_map.rst  sem_ops_module.rst  sem_partition.rst  sem_search.rst  sem_sim_join.rst  sem_topk.rst
examples/: multimodal_tests.ipynb
examples/model_examples/: cache.py
examples/multimodal_data/: filter.py  join.py  map.py
examples/op_examples/: agg.py  cluster.py  dedup.py  extract.py  filter.py  filter_cascade.py  join.py  join_cascade.py  map.py  map_fewshot.py  partition.py  schema.py  search.py  sim_join.py  top_k.py
examples/provider_examples/: oai.py  ollama.py  vllm.py
experiments/imageTable/: animals_results.json  animals_results_4legs_filter.html  animals_results_reptile_filter.html  createImageTable.py  imageTable.ipynb  loadImageTable.py  lotusImageTable1.py  lotus_animalimages_test.py  (+2 more)
lotus/: __init__.py  cache.py  nl_expression.py  settings.py  types.py  utils.py
(+51 files in other folders)
